# fast-asd

./: pyproject.toml
fast_asd/: __init__.py  main.py  scene_detection.py
fast_asd/talknet/: __init__.py  demoTalkNet.py  talkNet.py  trainTalkNet.py
talknet/: __init__.py
talknet/model/: __init__.py
talknet/utils/: __init__.py
